Fixed spacing on desc img

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -137,7 +137,7 @@ body {
 .corner-stamp {
     width: 630px;
     height: 414px;
-    padding: 0px 15px 15px 0px;
+    padding: 0px 0px 15px 0px;
 }
 
 @media (max-width: 700px) {
